src/test/ui/issues/issue-72839-error-overflow.stderr
error[E0425]: cannot find value `missing_var` in this scope
  --> $DIR/issue-72839-error-overflow.rs:18:8
   |
LL |     if missing_var % 8 == 0 {}
   |        ^^^^^^^^^^^ not found in this scope

error[E0275]: overflow evaluating the requirement `MyStruct<U>: Rem<MyStruct<T>>`
  --> $DIR/issue-72839-error-overflow.rs:8:12
   |
LL | impl<T, U> Rem<MyStruct<T>> for MyStruct<U> where MyStruct<U>: Rem<MyStruct<T>> {
   |            ^^^^^^^^^^^^^^^^
   |
   = help: consider adding a `#![recursion_limit="256"]` attribute to your crate (`issue_72839_error_overflow`)
note: required because of the requirements on the impl of `Rem<MyStruct<T>>` for `MyStruct<U>`
  --> $DIR/issue-72839-error-overflow.rs:8:12
   |
LL | impl<T, U> Rem<MyStruct<T>> for MyStruct<U> where MyStruct<U>: Rem<MyStruct<T>> {
   |            ^^^^^^^^^^^^^^^^     ^^^^^^^^^^^
   = note: 127 redundant requirements hidden
   = note: required because of the requirements on the impl of `Rem<MyStruct<T>>` for `MyStruct<U>`
note: required by a bound in `Rem`
  --> $SRC_DIR/core/src/ops/arith.rs:LL:COL
   |
LL | pub trait Rem<Rhs = Self> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `Rem`

error[E0275]: overflow evaluating the requirement `MyStruct<U>: Rem<MyStruct<T>>`
  --> $DIR/issue-72839-error-overflow.rs:10:8
   |
LL |     fn rem(self, _: MyStruct<T>) -> Self::Output {
   |        ^^^
   |
   = help: consider adding a `#![recursion_limit="256"]` attribute to your crate (`issue_72839_error_overflow`)
note: required because of the requirements on the impl of `Rem<MyStruct<T>>` for `MyStruct<U>`
  --> $DIR/issue-72839-error-overflow.rs:8:12
   |
LL | impl<T, U> Rem<MyStruct<T>> for MyStruct<U> where MyStruct<U>: Rem<MyStruct<T>> {
   |            ^^^^^^^^^^^^^^^^     ^^^^^^^^^^^
   = note: 127 redundant requirements hidden
   = note: required because of the requirements on the impl of `Rem<MyStruct<T>>` for `MyStruct<U>`

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0275, E0425.
For more information about an error, try `rustc --explain E0275`.
